tests/baselines/reference/nodeModulesDeclarationEmitWithPackageExports(module=nodenext).errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/index.cts(3,22): error TS1471: Module 'package/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/index.cts(4,23): error TS1471: Module 'package' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/index.cts(9,23): error TS1471: Module 'inner/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/node_modules/inner/index.d.cts(3,22): error TS1471: Module 'inner/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/node_modules/inner/index.d.cts(5,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/node/node_modules/inner/index.d.mts(5,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/node/node_modules/inner/index.d.ts(3,22): error TS1471: Module 'inner/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/node_modules/inner/index.d.ts(5,1): error TS1036: Statements are not allowed in ambient contexts.


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/index.ts (0 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    export const a = cjs;
    export const b = mjs;
    export const c = type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    export const d = cjsi;
    export const e = mjsi;
    export const f = typei;
==== tests/cases/conformance/node/index.mts (0 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    export const a = cjs;
    export const b = mjs;
    export const c = type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
    import * as typei from "inner";
    export const d = cjsi;
    export const e = mjsi;
    export const f = typei;
==== tests/cases/conformance/node/index.cts (3 errors) ====
    // cjs format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS1471: Module 'package/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS1471: Module 'package' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    export const a = cjs;
    export const b = mjs;
    export const c = type;
    import * as cjsi from "inner/cjs";
    import * as mjsi from "inner/mjs";
                          ~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as typei from "inner";
    export const d = cjsi;
    export const e = mjsi;
    export const f = typei;
==== tests/cases/conformance/node/node_modules/inner/index.d.ts (2 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
                         ~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "inner";
    cjs;
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    mjs;
    type;
    export const cjsMain = true;
==== tests/cases/conformance/node/node_modules/inner/index.d.mts (1 errors) ====
    // esm format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
    import * as type from "inner";
    cjs;
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    mjs;
    type;
    export const esm = true;
==== tests/cases/conformance/node/node_modules/inner/index.d.cts (2 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs";
    import * as mjs from "inner/mjs";
                         ~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "inner";
    cjs;
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    mjs;
    type;
    export const cjsNonmain = true;
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }
==== tests/cases/conformance/node/node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }